# RouteSMT

./: README.md  design.py  pyproject.toml  run.py
z3router/: __init__.py
z3router/constraints/: __init__.py  routing.py
z3router/core/: __init__.py  grid.py  solver.py  variables.py
z3router/eda/: __init__.py  synopsys_cc.py
z3router/io/: __init__.py  normalize.py  visualizer.py
z3router/tech/: __init__.py  layer_info.py
