[build-system]
requires      = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name        = "z3router"
version     = "0.1.0"
description = "Z3-based SMT solver for multi-net VLSI routing"
readme      = "README.md"
license     = { text = "MIT" }
requires-python = ">=3.9"

keywords = [
    "VLSI", "routing", "EDA", "Z3", "SMT", "constraint-solving",
    "layout", "semiconductor",
]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Electronic Design Automation (EDA)",
]

dependencies = [
    "z3-solver>=4.12",
    "matplotlib>=3.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
    "ruff",
    "mypy",
]

[project.urls]
Repository = "https://github.com/your-username/z3router"
Issues     = "https://github.com/your-username/z3router/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["z3router*"]

# ---------------------------------------------------------------------------
# Linting / formatting
# ---------------------------------------------------------------------------

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]
ignore = ["E501"]   # line length handled separately

# ---------------------------------------------------------------------------
# Type checking
# ---------------------------------------------------------------------------

[tool.mypy]
python_version      = "3.9"
strict              = false
ignore_missing_imports = true

# ---------------------------------------------------------------------------
# Testing
# ---------------------------------------------------------------------------

[tool.pytest.ini_options]
testpaths    = ["tests"]
addopts      = "-v --tb=short"
